--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -8,11 +9,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Strive Personal Bootstrap Responsive website Template | Home :: w3layouts</title>
+    <title>Golden Liquid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
-    <meta name="keywords" content="Strive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+    <meta name="keywords" content="honey, manuka honey, " />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -78,13 +78,35 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- banner -->
     <section class="slide-wrapper">
         <!-- banner slide -->
+			<!-- The video -->
+		<div>
+		<!-- Optional: some overlay text to describe the video -->	
+		<div class="content">
+			
+			<div class="col-md-6">       </div>
+			<div class="col-md-6 headerMid">
+		  <h1>Heading</h1>
+		  <p>Lorem ipsum...</p>
+		   Use a button to pause/play the video with JavaScript 
+		  <button id="myBtn" onclick="myFunction()">Pause</button>
+			</div>
+			<div class="col-md-6"></div>
+			
+		</div>
+		
+		<video autoplay muted loop id="myVideo">
+		  <source src="videos/honey.mp4" type="video/mp4">
+		</video>
+		
+		
+		</div>
         <div class="agile_banner bg1">
             <div class="layer">
                 <div class="container">
                     <div class="banner_text_wthree">
                         <div class="d-flex">
                             <h1>welcome to </h1>
-                            <h2>&nbsp;my site</h2>
+                            <h2>&nbsp;Golden Liquid</h2>
                         </div>
                         <div id="text" class="banner_text_w3ls my-md-5 my-3"></div>
                         <ul class="list-inline bnr_list_w3">
@@ -111,6 +133,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </footer>
     <!-- //footer -->
     <!-- js -->
+	<!-------------------------------------------->
+	
+	<script>
+	// Get the video
+	var video = document.getElementById("myVideo");
+
+	// Get the button
+	var btn = document.getElementById("myBtn");
+
+	// Pause and play the video, and change the button text
+	function myFunction() {
+		if (video.paused) {
+			video.play();
+			btn.innerHTML = "Pause";
+		} else {
+			video.pause();
+			btn.innerHTML = "Play";
+		}
+	}
+	</script>
+	
+	<!-------------------------------------------->
     <script src="js/jquery-2.2.3.min.js"></script>
     <!-- //js -->
     <!-- few java snippets-->
@@ -122,11 +166,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         document.addEventListener('DOMContentLoaded', function (event) {
 
             var dataText = [
-                "Hi there, Iam  James smith.",
-                "I'm  UI/UX designer.",
-                "I have strong knowledge in web development",
-                "As well as in photohsop, css3",
-                "Cross browser compiled layout"
+                "Advocates say it can treat wound infections and other conditions.",
+                "Honey has been used since ancient times to treat multiple conditions.",
+                "Some also boost production of special cells that can repair tissue damaged by infection. ",
+                "But not all honey is the same.  ",
+                "The antibacterial quality of honey depends on the type of honey as well as when and how it's harvested."
             ];
 
             // type one text in the typwriter
