--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			
 			<div class="col-md-6">       </div>
 			<div class="col-md-6 headerMid">
-		  <h1>Heading</h1>
-		  <p>Lorem ipsum...</p>
-		   Use a button to pause/play the video with JavaScript 
+		  <h1>Life is the flower for which love is the honey</h1>
+		  <p>For so work the honey-bees, creatures that by a rule in
+			 nature teach the act of order to a peopled kingdom.
+			 ~ William Shakespeare
+			</p>
+		   
 		  <button id="myBtn" onclick="myFunction()">Pause</button>
 			</div>
 			<div class="col-md-6"></div>
