index menu update

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="skills.html">Skills</a>
+                    <a href="skills.html">Products</a>
                 </li>
                 <li>
                     <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="portfolio.html">Portofolio</a>
+                    <a href="portfolio.html">Information</a>
                 </li>
                 <li>
                     <a href="contact.html">contact</a>
@@ -69,7 +69,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <!-- logo -->
         <div class="logo_wthree">
             <a href="index.html">
-                <i class="fab fa-node-js"></i>
+                <!--<i class="fa fa-eye"></i>-->
             </a>
         </div>
         <!-- //logo -->
@@ -83,17 +83,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- Optional: some overlay text to describe the video -->	
 		<div class="content">
 			
-			<div class="col-md-6">       </div>
-			<div class="col-md-6 headerMid">
+			
+			<div class="headerMid">
 		  <h1>Life is the flower for which love is the honey</h1>
-		  <p>For so work the honey-bees, creatures that by a rule in
-			 nature teach the act of order to a peopled kingdom.
-			 ~ William Shakespeare
+			<p>For so work the honey-bees, creatures that by a rule in
+				nature teach the act of order to a peopled kingdom.
+				~ William Shakespeare
 			</p>
 		   
-		  <button id="myBtn" onclick="myFunction()">Pause</button>
+		  <!--<button id="myBtn" onclick="myFunction()">Pause</button>-->
 			</div>
-			<div class="col-md-6"></div>
+			
 			
 		</div>
 		
