--- a/about.html
+++ b/about.html
@@ -55,13 +55,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a href="about.html" class="active">About</a>
                     </li>
                     <li>
-                        <a href="skills.html">Skills</a>
+                        <a href="skills.html">Products</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Portofolio</a>
+                        <a href="information.html">Information</a>
                     </li>
                     <li>
                         <a href="contact.html">contact</a>
@@ -72,7 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- logo -->
             <div class="logo_wthree">
                 <a href="index.html">
-                    <i class="fab fa-node-js"></i>
+                    <!--<i class="fab fa-node-js"></i>-->
                 </a>
             </div>
             <!-- //logo -->
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         <div class="container">
             <div class="wthree-inner-sec  about-bot-w3ls">
                 <div class="sec-head">
-                    <h1 class="sec-title-w3 text-capitalize">about me</h1>
+                    <h1 class="sec-title-w3 text-capitalize">about us</h1>
                     <span class="block"></span>
                 </div>
                 <div class="about_w3l position-relative">
@@ -93,8 +93,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="profile-image">
                             <img src="images/about.jpg" alt="about _image" class="img-fluid" />
                         </div>
-                        <h2 class="profile-title">James
-                            <span>Smith</span>
+                        <h2 class="profile-title">Golden
+                            <span>Liquid</span>
                         </h2>
                         <div class="profile-info">
                             <div class="content">
@@ -105,23 +105,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <div class="col-sm-8  my-auto">
                                         <div class="link_about">
                                             <i class="fa fa-link" aria-hidden="true"></i>
-                                            <a href="http://jamessmith.com" target="_blank">www.jamessmith.com</a>
+                                            <a href="#" target="_blank">www.goldenliquid.com</a>
                                         </div>
                                         <div class="link_about my-2">
                                             <i class="fa fa-globe" aria-hidden="true"></i>
-                                            <a href="#">www.resume.com</a>
+                                            <a href="#">www.goldenliquid.com</a>
                                         </div>
                                         <div class="link_about">
                                             <i class="fa fa-envelope" aria-hidden="true"></i>
-                                            <a href="#">mail@bio.com</a>
+                                            <a href="#">mail@gl.com</a>
                                         </div>
                                     </div>
                                 </div>
-                                <p>#Graphic / #Web #Designer & #frontend #developer Occasional blogger.Lorem ipsum dolor sit
-                                    amet, consectetur adipiscing elit. Curabitur non nulla sit amet nisl tempus convallis
-                                    quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. </p>
+                                <p>Golden Liuid is a subsidiery of Planet Africa, and is dedicated to producing pure, unudultrated premium honey for Zimbabwe, and the World. </p>
+								<p>We have acres of apiaries all over Zimbabwe, ensuring a variety of characteristics from our honey. As the quality and type of honey depends on the forage from which bees are gathering. </p>
 
-                                <div class="stats">
+                                <!--<div class="stats">
                                     <div class="row">
                                         <div class="col-4 stat">
                                             <span class="number">342</span> Followers
@@ -133,7 +132,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                             <span class="number">175</span> Posts
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
@@ -145,8 +144,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- footer -->
     <footer>
         <div class="cpy-right text-center py-4">
-            <p class="text-white">© 2018 Strive. All rights reserved | Design by
-                <a href="http://w3layouts.com"> W3layouts.</a>
+            <p class="text-white">© 2018. All rights reserved. Design by
+                <a href=""> PlanetAfrica.</a>
             </p>
         </div>
     </footer>
