--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -54,13 +55,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="skills.html">Skills</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Portofolio</a>
+                        <a href="information.html">Information</a>
                     </li>
                     <li>
                         <a href="contact.html" class="active">contact</a>
@@ -71,7 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- logo -->
             <div class="logo_wthree">
                 <a href="index.html">
-                    <i class="fab fa-node-js"></i>
+                    <!--<i class="fab fa-node-js"></i>-->
                 </a>
             </div>
             <!-- //logo -->
@@ -160,9 +161,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- footer -->
     <footer>
         <div class="cpy-right text-center py-4">
-            <p class="text-white">© 2018 Strive. All rights reserved | Design by
-                <a href="http://w3layouts.com"> W3layouts.</a>
-            </p>
+            <p class="text-white">© 2018. All rights reserved. Design by
+                <a href=""> PlanetAfrica.</a>
+			</p>
         </div>
     </footer>
     <!-- //footer -->
