--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="skills.html">Products</a>
+                    <a href="products.html">Products</a>
                 </li>
                 <li>
                     <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="portfolio.html">Information</a>
+                    <a href="information.html">Information</a>
                 </li>
                 <li>
                     <a href="contact.html">contact</a>
@@ -114,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div id="text" class="banner_text_w3ls my-md-5 my-3"></div>
                         <ul class="list-inline bnr_list_w3">
                             <li class="list-inline-item">
-                                <a class="btn  text-white  scroll" href="portfolio.html">view my work </a>
+                                <a class="btn  text-white  scroll" href="information.html">view my work </a>
                             </li>
                             <li class="list-inline-item">
                                 <a class="btn  text-white bg-dark scroll" href="contact.html">contact me</a>
@@ -129,9 +129,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- footer -->
     <footer>
         <div class="cpy-right text-center py-4">
-            <p class="text-white">© 2018 Strive. All rights reserved | Design by
-                <a href="http://w3layouts.com"> W3layouts.</a>
-            </p>
+            <p class="text-white">© 2018. All rights reserved. Design by
+                <a href=""> PlanetAfrica.</a>
+			</p>
         </div>
     </footer>
     <!-- //footer -->
