--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Information</a>
+                        <a href="information.html">Information</a>
                     </li>
                     <li>
                         <a href="contact.html">contact</a>
@@ -83,38 +83,30 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- skill set -->
     <section class="pb-5">
         <div class="container">
-            <div class="wthree-inner-sec skills-bg">
-                <div class="sec-head text-center">
-                    <h1 class="sec-title-w3 text-capitalize text-dark">skill set</h1>
-                    <span class="block mx-auto"></span>
-                </div>
-                <div class="wthree-row py-md-5 py-3">
-                    <div id="wrapper">
-                        <div class="chart">
-                            <table id="data-table" class="table-responsive">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">CSS</th>
-                                        <th scope="col">SEO</th>
-                                        <th scope="col">Design</th>
-                                        <th scope="col">HTML</th>
-                                        <th scope="col">CMS</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>90</td>
-                                        <td>50</td>
-                                        <td>80</td>
-                                        <td>95</td>
-                                        <td>80</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="row card-deck">
+				<div class= "col-md-4 card">
+					<div class="card-header">
+					dfdvfvfvfd
+					</div>
+					<div class="card-body">
+						<img src="images/g3.jpg" alt="Italian Trulli">
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+            	<div class= "col-md-4 card">fdvfdvdfvfdv</div>
+				<div class= "col-md-4 card">vfdvfdfvvvf</div>
+				
+            </div>		
         </div>
     </section>
     <!-- //skill set -->
