--- a/services.html
+++ b/services.html
@@ -54,13 +54,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="skills.html">Skills</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="services.html" class="active">Services</a>
                     </li>
                     <li>
-                        <a href="portfolio.html">Portofolio</a>
+                        <a href="information.html">Information</a>
                     </li>
                     <li>
                         <a href="contact.html">contact</a>
@@ -71,7 +71,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- logo -->
             <div class="logo_wthree">
                 <a href="index.html">
-                    <i class="fab fa-node-js"></i>
+                    <!--<i class="fab fa-node-js"></i>-->
                 </a>
             </div>
             <!-- //logo -->
@@ -211,9 +211,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- footer -->
     <footer>
         <div class="cpy-right text-center py-4">
-            <p class="text-white">© 2018 Strive. All rights reserved | Design by
-                <a href="http://w3layouts.com"> W3layouts.</a>
-            </p>
+            <p class="text-white">© 2018. All rights reserved. Design by
+                <a href=""> PlanetAfrica.</a>
+			</p><p class="text-white">© 2018. All rights reserved. Design by
+                <a href=""> PlanetAfrica.</a>
+			</p>
         </div>
     </footer>
     <!-- //footer -->
