--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Golden Liquid</title>
+    <title>Golden Liquid About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Strive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <a href="about.html" class="active">About</a>
                     </li>
                     <li>
-                        <a href="skills.html">Products</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
