--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Golden Liquid</title>
+    <title>Golden Liquid Products</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Strive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -83,13 +83,39 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- skill set -->
     <section class="pb-5">
         <div class="container">
-            <div class="row card-deck">
-				<div class= "col-md-4 card">
+			
+            <div class="row card-deck deckrow">
+				<div class= "col-md-3 card">
 					<div class="card-header">
-					dfdvfvfvfd
+						<h3>Acacia Honey</h3> 
 					</div>
 					<div class="card-body">
-						<img src="images/g3.jpg" alt="Italian Trulli">
+						<img src="images/products/honey_3.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$6.50</b>
+						</div>
+						<ul>
+							<li>
+								Acacia is very sweet with a clean,
+							</li>
+							<li>
+								pure, classic honey flavor.
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+            	<div class= "col-md-3 card">
+					<div class="card-header">
+					Alfalfa Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_4.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$4.50</b>
+						</div>
 						<ul>
 							<li>
 								this is a test this is a test this is a test
@@ -103,10 +129,325 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</ul>
 					</div>
 				</div>
-            	<div class= "col-md-4 card">fdvfdvdfvfdv</div>
-				<div class= "col-md-4 card">vfdvfdfvvvf</div>
-				
-            </div>		
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Blackberry Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_5.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$5.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Blueberry Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_6.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$6.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>		
+            </div>	
+			
+			 <div class="row card-deck">
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Buckwheat Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_7.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$3.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+            	<div class= "col-md-3 card">
+					<div class="card-header">
+					Clover Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_8.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$2.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Coffee Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_9.png" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$3.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Eucalyptus Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_10.png" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$4.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>		
+            </div>
+			
+			 <div class="row card-deck">
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Fireweed Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_11.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$5.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+            	<div class= "col-md-3 card">
+					<div class="card-header">
+					Heather Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_12.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$6.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Linden Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_5.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$2.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Orange blossom Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_6.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$7.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>		
+            </div>
+			
+			 <div class="row card-deck">
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Palmetto Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_3.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$9.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+            	<div class= "col-md-3 card">
+					<div class="card-header">
+					Sage Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_4.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$6.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Sourwood Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_5.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$10.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class= "col-md-3 card">
+					<div class="card-header">
+					Tupelo Honey
+					</div>
+					<div class="card-body">
+						<img src="images/products/honey_6.jpg" alt="honey_3" height="200" width="200">
+						<div class="card-header-pills">
+							<b>$4.50</b>
+						</div>
+						<ul>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+							<li>
+								this is a test this is a test this is a test
+							</li>
+						</ul>
+					</div>
+				</div>		
+            </div>
+			
         </div>
     </section>
     <!-- //skill set -->
