--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Strive Personal Category Bootstrap Responsive website Template | Services :: w3layouts</title>
+    <title>Golden Liquid Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
     <meta name="keywords" content="Strive Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -92,7 +92,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-4 my-auto">
-                                    <img src="images/screen1.png" alt="" class="img-fluid" />
+                                    <img src="images/bees_1.jpg" alt="" class="img-fluid" />
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="d-flex services-box">
@@ -101,9 +101,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         </span>
                                         <!-- .Icon ends here -->
                                         <div class="service-content">
-                                            <h2>Clean Design</h2>
+                                            <h2>Removing pesterous bees.</h2>
                                             <p>
-                                                Quisque sagittis lacus eu lorem sodalesd vulputate velitdipisc inagittis lacg enean adipiscing.
+                                                If you have unwelcome bees near you, contact us and we will remove them at no cost to you.
+												The bees will be rehabilitated to a safe environment.
                                             </p>
                                         </div>
                                         <!-- .Service-content ends here -->
@@ -116,9 +117,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         </span>
                                         <!-- .Icon ends here -->
                                         <div class="service-content">
-                                            <h4>Easy Parallax</h4>
+                                            <h4>Manufacture of bee keeping essntials</h4>
                                             <p>
-                                                Quisque sagittis lacus eu lorem sodalesd vulputate velitdipisc inagittis lacg enean adipiscing.
+                                                We manufacture state of the art bee hives, beekeeping suits, and other accessories.
                                             </p>
                                         </div>
                                         <!-- .Service-content ends here -->
@@ -130,9 +131,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         </span>
                                         <!-- .Icon ends here -->
                                         <div class="service-content">
-                                            <h4>Responsive Layout</h4>
+                                            <h4>Processing and packaging</h4>
                                             <p>
-                                                Quisque sagittis lacus eu lorem sodalesd vulputate velitdipisc inagittis lacg enean adipiscing.
+                                                We process and package our own honey. We also support small scale beekeepers by establishing a reliable local market for their bulk produce.
                                             </p>
                                         </div>
                                         <!-- .Service-content ends here -->
@@ -177,9 +178,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         </span>
                                         <!-- .Icon ends here -->
                                         <div class="service-content">
-                                            <h4>Clean Design</h4>
+                                            <h4>Beekeeping Trainning</h4>
                                             <p>
-                                                Quisque sagittis lacus eu lorem sodalesd vulputate velitdipisc inagittis lacg enean adipiscing.
+                                                We have well reserched, and documented trainning resourses redy for purchase by aspiring beekeepers.
                                             </p>
                                         </div>
                                         <!-- .Service-content ends here -->
@@ -199,10 +200,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
        <div class="container bg-light pt-5">
             <div class="row  py-sm-5">
                 <div class="col-md-7">
-                    <img src="images/main.png" alt="" class="img-fluid" />
+                    <img src="images/bees_2.jpg" alt="" class="img-fluid" />
                 </div>
                 <div class="col-md-5 my-auto service-txt">
-                    <h5>connecting you with <span>freelance</span> web professionals</h5>
+                    <h5>Bringing <span>pure unudultrated</span> honey to you</h5>
                 </div>
             </div>
         </div>
@@ -212,8 +213,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <footer>
         <div class="cpy-right text-center py-4">
             <p class="text-white">© 2018. All rights reserved. Design by
-                <a href=""> PlanetAfrica.</a>
-			</p><p class="text-white">© 2018. All rights reserved. Design by
                 <a href=""> PlanetAfrica.</a>
 			</p>
         </div>
